--- a/src/style.css
+++ b/src/style.css
@@ -2,51 +2,60 @@
 :root {
   font-family: "Space Grotesk", sans-serif;
   color-scheme: light dark;
-  
-  
   font-synthesis: none;
   text-rendering: optimizeLegibility;
- 
-  --text-color:#011B0F;
-  --text-color-coins:#f0f0f0;
-  --bg-color:#f0f0f0;
-  --bg-navbar:#022213;
-  --bg-navbar-icon:#011B0F;
-  --bg-search:#011B0F;
-  --bg-profile:#011B0F;
-  --bg-profile-name:#b0ec69;
-  --bg-ranking:#011B0F;
-  --bg-ranking-item:#022213;
-  --bg-list:#032917;
-  --bg-list-item:#022213;
-  --bg-list-stats:#011B0F;
-  --bg-chart:#022213;
-  --bg-chart-item:#b0ec69;
+  --text-color: #011b0f;
+  --text-name: #011b0f;
+  --text-color-coins: #f0f0f0;
+  --bg-color: #f0f0f0;
+  --bg-navbar: #022213;
+  --bg-navbar-icon-hover: #011b0f;
+  --bg-search: #011b0f;
+  --bg-profile: #011b0f;
+  --bg-profile-name: #b0ec69;
+  --bg-ranking: #011b0f;
+  --bg-ranking-item: #022213;
+  --bg-list: #032917;
+  --bg-list-item: #022213;
+  --bg-list-item-hover: #033f28;
+  --bg-list-item-hover-icon: #b0ec69;
+  --bg-list-stats: #011b0f;
+  --bg-chart: #022213;
+  --bg-chart-item: #b0ec69;
   --bg-buttons: #b0ec69;
+  --bg-gradient-top: #b0ec6999;
+  --bg-gradient-bottom: #0222131a;
   --bg-buttons-hover: #b0ec69;
-  --bg-buttons-container:#011B0F;
+  --text-number-chart: #b0ec69;
+  --bg-buttons-container: #011b0f;
+}
+.dark {
+  --text-color: #b0004a;
+  --text-name: #f0f0f0;
+  --text-color-coins: #f0f0f0;
+  --bg-color: #1a1a1a;
+  --bg-navbar: #d80059;
+  --bg-navbar-icon-hover: #b0004a;
+  --bg-search: #b0004a;
+  --bg-profile: #b0004a;
+  --bg-profile-name: #d80059;
+  --bg-ranking: #b0004a;
+  --bg-ranking-item: #d80059;
+  --bg-list: #8a003b;
+  --bg-list-item: #d80059;
+  --bg-list-item-hover: #500a27;
+  --bg-list-item-hover-icon: #ffa7c9;
+  --bg-list-stats: #b0004a;
+  --bg-chart: #d80059;
+  --bg-chart-item: #ffa7c9;
+  --bg-buttons: #ffa7c9;
+  --bg-gradient-top: #ffa7c980;
+  --bg-gradient-bottom: #8a003b40;
+  --bg-buttons-hover: #dc5aac;
+  --text-number-chart: #ffa7c9;
+  --bg-buttons-container: #b0004a;
+}
 
-}
-.dark{
-  --text-color:#B0004A;
-  --text-color-coins:#f0f0f0;
-  --bg-color:#1A1A1A;
-  --bg-navbar:#D80059;
-  --bg-navbar-icon:#B0004A;
-  --bg-search:#B0004A;
-  --bg-profile:#B0004A;
-  --bg-profile-name:#D80059;
-  --bg-ranking:#B0004A;
-  --bg-ranking-item:#D80059;
-  --bg-list:#8A003B;
-  --bg-list-item:#D80059;
-  --bg-list-stats:#B0004A;
-  --bg-chart:#D80059;
-  --bg-chart-item:#FFA7C9;
-  --bg-buttons: #FFA7C9;
-  --bg-buttons-hover: #FFA7C9;
-  --bg-buttons-container:#B0004A;
-}
 * {
   margin: 0;
   padding: 0;
